--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,57 @@
-.idea
-./.idea
-./.idea/*
-.DS_Store
-node_modules
-dist
+# Go
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+vendor/
+
+# Frontend
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/dist/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/.pnpm-debug.log*
+frontend/.yarn/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+
+# Environment
 .env
 .env.local
 .env.*.local
-.vscode
-.vscode/*
-coverage
-logs
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Docker
+.docker/
+
+# Logs
 *.log
-.claude
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
-Thumbs.db
-.claude/
-.claude/*
-.cursor
+logs/
+
+# Temporary files
+tmp/
+temp/
+
+# GitHub Pages build (don't ignore public/api as it contains static data)
+# frontend/build/
