--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
