--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend {
+    server backend:8080;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -22,7 +26,9 @@ server {
 
     # API proxy
     location /api/ {
-        proxy_pass http://backend:8080/api/;
+        resolver 127.0.0.11 valid=10s;
+        set $upstream_backend http://backend:8080;
+        proxy_pass $upstream_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
