feat: Update .env.example for improved clarity and structure; add instructions for root .env usage

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,90 @@
-# Server Configuration
-SERVER_HOST=localhost
+# ============================================
+# RealFreedom Project - Environment Variables
+# ============================================
+# This file contains all environment variables for both backend and frontend
+# Copy this file to .env and fill in your actual values
+# Command: cp .env.example .env
+# NEVER commit .env to version control!
+
+# ============================================
+# Backend - Server Configuration
+# ============================================
+SERVER_HOST=0.0.0.0
 SERVER_PORT=8080
 ENV=development
 
-# Database Configuration (SQLite)
+# ============================================
+# Backend - Database Configuration
+# ============================================
+# Database type: sqlite or postgres
 DB_TYPE=sqlite
+
+# SQLite Configuration (when DB_TYPE=sqlite)
 DB_PATH=./data/freedom.db
 
-# For future PostgreSQL/MariaDB support:
-# DB_TYPE=postgres
+# PostgreSQL Configuration (when DB_TYPE=postgres)
 # DB_HOST=localhost
 # DB_PORT=5432
 # DB_NAME=freedom
 # DB_USER=freedom_user
-# DB_PASSWORD=your_password
+# DB_PASSWORD=
 # DB_SSL_MODE=disable
 
-# CORS
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+# ============================================
+# Backend - CORS Configuration
+# ============================================
+# Comma-separated list of allowed origins for CORS
+# Example: http://localhost:3000,http://localhost:8098,https://yourdomain.com
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8098
 
-# JWT (for future auth)
-JWT_SECRET=your-secret-key-change-in-production
+# ============================================
+# Backend - JWT Authentication Configuration
+# ============================================
+# IMPORTANT: Change this to a strong random secret in production!
+# Generate a secure secret: openssl rand -base64 32
+JWT_SECRET=change-me-in-production-use-a-strong-random-secret
 JWT_EXPIRY=24h
+
+# ============================================
+# Backend - Email Configuration (Gmail SMTP)
+# ============================================
+# Gmail SMTP settings for sending verification emails
+# 
+# Setup Instructions:
+# 1. Enable 2-Step Verification in your Google Account
+# 2. Generate an App Password: https://myaccount.google.com/apppasswords
+# 3. Select "Mail" and your device, then copy the 16-character password
+# 4. Use that password for MAIL_PASSWORD below
+#
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password-here
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=your-email@gmail.com
+MAIL_FROM_NAME=RealFreedom
+
+# ============================================
+# Frontend - React App Configuration
+# ============================================
+# Note: Create React App requires .env file in frontend directory
+# The frontend/.env is a symlink to this root .env file
+# 
+# API URL for frontend to connect to backend
+# Leave empty to use default: http://localhost:8060/api/v1 (dev) or /api/v1 (prod)
+REACT_APP_API_URL=
+
+# Use static API files in production (for static site generation)
+# Set to "true" to use static JSON files instead of live API
+REACT_APP_USE_STATIC_API=
+
+# ============================================
+# Quick Setup Guide
+# ============================================
+# 1. Copy this file: cp .env.example .env
+# 2. Edit .env and fill in your values
+# 3. For Gmail, get an app password (see instructions above)
+# 4. For production, generate a strong JWT_SECRET
+# 5. Create frontend/.env symlink: ln -s ../.env frontend/.env
+#    (This is done automatically, but you can recreate it if needed)
+# 6. Never commit .env to git (it's already in .gitignore)
