--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -37,9 +37,24 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        proxy_connect_timeout 60s;
+        proxy_connect_timeout 10s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        
+        # Retry on failure
+        proxy_next_upstream error timeout http_502 http_503 http_504;
+        proxy_next_upstream_tries 3;
+        proxy_next_upstream_timeout 30s;
+        
+        # Don't fail if backend is down - return 503 instead of 502
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @backend_fallback;
+    }
+    
+    # Fallback for backend errors
+    location @backend_fallback {
+        default_type application/json;
+        return 503 '{"status":"error","message":"Backend service is temporarily unavailable. Please try again in a moment."}';
     }
 
     # Static assets caching
