--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -8,6 +8,17 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # PDF / static downloads (serve directly, do NOT fall back to SPA)
+    # We mount host ./files -> /files in docker-compose
+    location /files/ {
+        alias /files/;
+        try_files $uri =404;
+
+        # Friendly download behavior for PDFs
+        types { application/pdf pdf; }
+        add_header Cache-Control "public, max-age=31536000, immutable" always;
+    }
+
     # Gzip compression
     gzip on;
     gzip_vary on;
