--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -17,6 +17,7 @@ server {
         # Friendly download behavior for PDFs
         types { application/pdf pdf; }
         add_header Cache-Control "public, max-age=31536000, immutable" always;
+        add_header Content-Disposition "attachment" always;
     }
 
     # Gzip compression
