--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -21,16 +21,46 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Prepare files for deployment
+        run: |
+          # Create tar archive excluding large files and build artifacts
+          tar --exclude='.git' \
+            --exclude='node_modules' \
+            --exclude='frontend/node_modules' \
+            --exclude='frontend/build' \
+            --exclude='backend/cmd/server/server' \
+            --exclude='backend/server' \
+            --exclude='data' \
+            --exclude='.env*' \
+            --exclude='.DS_Store' \
+            --exclude='__pycache__' \
+            --exclude='*.pyc' \
+            --exclude='*.db' \
+            --exclude='*.db-shm' \
+            --exclude='*.db-wal' \
+            -czf deploy.tar.gz .
+
       - name: Copy files to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "."
+          source: "deploy.tar.gz"
           target: "/home/${{ secrets.SERVER_USERNAME }}/freedom-website"
           strip_components: 0
           rm: false
+
+      - name: Extract files on server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /home/${{ secrets.SERVER_USERNAME }}/freedom-website
+            tar -xzf deploy.tar.gz
+            rm deploy.tar.gz
 
       - name: Deploy on server
         uses: appleboy/ssh-action@v1.0.3
