Fix timeout format: use duration strings (300s, 10m) instead of numbers
- Change timeout from 300 to 300s
- Change command_timeout from 300 to 10m
- SCP action requires duration format with units

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -86,8 +86,8 @@ jobs:
           strip_components: 0
           rm: false
           debug: true
-          timeout: 300
-          command_timeout: 300
+          timeout: 300s
+          command_timeout: 10m
 
       - name: Extract files on server
         uses: appleboy/ssh-action@v1.0.3
